Thu Sep 30 09:24:26 BST 2004 (trog)
-----------------------------------
  * libclamav/special.c: match obfuscated JPEG files

Thu Sep 30 10:01:23 CEST 2004 (tk)
----------------------------------
  * libclamav/matcher: handle Exploit.JPEG.Comment.*

Thu Sep 30 02:19:12 CEST 2004 (tk)
----------------------------------
  * libclamav/special.c: add cli_check_jpeg_exploit (by Trog)
  * libclamav/matcher.c: add additional check to eliminate false positive
			 matches of Exploit.JPEG.Comment

Tue Sep 28 19:41:39 BST 2004 (njh)
----------------------------------
  * libclamav:		Some small speed and size optimisations in MIME decoding

Tue Sep 28 15:46:18 BST 2004 (njh)
---------------------------------
  * contrib/clamavmon:	No longer multithreaded
  * clamav-milter:	Added support for operating systems without
				SO_BINDTODEVICE

Tue Sep 28 10:57:13 BST 2004 (njh)
----------------------------------
  * contrib/clamavmon:	Added monitor of clamd status

Mon Sep 27 23:59:04 CEST 2004
----------------------------------
  * docs: update
  V 0.80rc3

Mon Sep 27 22:51:05 CEST 2004 (tk)
----------------------------------
  * clamd: add new directive DisableDefaultScanOptions
  * configs, manual pages: clarify default actions for clamd and freshclam

Mon Sep 27 18:12:17 BST 2004 (njh)
----------------------------------
  * clamav-milter:	added optional iface argument to --broadcast
  * contrib/clamavmon:	created first draft of a network monitor/management
				utility for clamAV. Currently displays incoming
				viruses trapped by clamav-milter

Mon Sep 27 18:46:26 CEST 2004 (tk)
----------------------------------
  * clamd/others.c: disable broken poll() code in is_fd_connected()
  * docs/MacOSX: update (Dale Enterprise L.L.C)

Mon Sep 27 13:44:45 BST 2004 (njh)
----------------------------------
  * clamav-milter:	SESSIONS: try to gracefully close when shutting down
		honour HAVE_IN_ADDR_T
		Added --broadcast option

Mon Sep 27 04:00:14 CEST 2004 (tk)